# pi_projects

./: .gitignore  .vimrc  README.md  pi.config  pi.config_example  startup_script.sh
configs/: .bashrc  (+3 more)
python/: Pipfile  pyproject.toml
python/displays/: 7SegClock.py  7SegClock_plain.py
python/displays/microdot/: microdotClock.py
python/displays/neopixel/: neopixel_rpi_simpletest.py  white.py
python/displays/rpi-rgb-led-matrix/examples-api-use/: input-example
python/displays/rpi-rgb-led-matrix_OLD/lib/: Makefile
python/displays/starboard/: stars.py  vert_stars.py
python/displays/waveshare/: tmp_dbReads.py  weather.py
python/rfm69/: try2.py
python/rpi-rgb-led-matrix/examples-api-use/: input-example  pixel-mover
python/scripts/: bridge_pin.py  midi_bridge.py  read_pin.py  write_pin.py
python/security/: readMotionSensors.py
python/sensorRead/: readTemperature_MCP9808.py  readTemperature_SHT31-D.py
python/src/: db_test.py  tmp.txt
python/src/backup/sensorRead/: bmp280.py  (+1 more)
python/src/mbutki.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/src/pi_projects.egg-info/: PKG-INFO  SOURCES.txt
python/src/sensorRead/: readAirQuality_PMS5003.py  readLight_VEML7700.py  readPressure_BMP280.py  readTemperature_analog.py
python/src/sensor_read/: SHT31-D_read_temp_humid.py
python/src/weather/: dbReads.py  fetch_weather.py  fetch_weather_mariadb.py.bak  iconUtils.py  iconUtils.py.bak  query_test.py  rangeTest.py  run_weather.sh  showWeather.py  show_weather.py
python/weather/: fetch_weather.py  iconUtils.py  showWeather.py  utils.py
(+1026 files in other folders)
