[project]
name = "mbutki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "adafruit-circuitpython-sht31d>=2.3.26",
    "mariadb>=1.1.12",
    "numpy>=2.2.5",
    "pillow>=11.2.1",
    "requests>=2.32.3",
    "rgbmatrix",
    "rpi-lgpio>=0.6",
    "spidev>=3.7",
]

[tool.uv.sources]
rgbmatrix = { path = "rpi-rgb-led-matrix/bindings/python" }
